fix text align

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ h3,
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  text-align: justify;
+  text-align: center;
   padding-bottom: 100px;
   font-weight: 300;
   list-style: none;
